--- a/app/assets/stylesheets/reserves.scss
+++ b/app/assets/stylesheets/reserves.scss
@@ -72,7 +72,6 @@ main {
 
 .reserves-list {
   display: flex;
-  position: relative;
 
   span, p {
     line-height: 1.25rem;
